- Camera support for card recognition - Added comments - Card capture layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="call">Was wurde gerufen?</string>
     <string name="soloCall">Was war die Trumpffarbe?</string>
     <string name="title_activity_main_game">ActivityMainGame</string>
+    <string name="title_choose_game">ChooseGame</string>
     <string name="announcement">Neue Ansage</string>
     <string name="announcementMade">Angesagt\:</string>
     <string name="noChoice">Es wurde noch nichts angesagt...</string>
